# sandboxed-fann

./: .gitignore  README.md  gen_wasm_lib.sh
src/: CMakeLists.txt  fann_pylib.c  fann_pylib.h  fannwasm.c  fannwasm.h  sandbox_fann.cpp  sandbox_fann.h  sandboxfann.py  xor_float.net
